Fixed error in Export caused by null value

--- a/Blazm.Components/Blazm.Components/Grid/BlazmGrid.razor
+++ b/Blazm.Components/Blazm.Components/Grid/BlazmGrid.razor
@@ -292,11 +292,11 @@
 
                 if (column.Format == null)
                 {
-                    stringValue = r.GetType().GetProperty(column.Field).GetValue(r).ToString();
+                    stringValue = r.GetType().GetProperty(column.Field).GetValue(r)?.ToString();
                 }
                 else
                 {
-                    stringValue = string.Format(column.Format, r.GetType().GetProperty(column.Field)?.GetValue(r).ToString());
+                    stringValue = string.Format(column.Format, r.GetType().GetProperty(column.Field)?.GetValue(r)?.ToString());
                 }
 
                 switch (r.GetType().GetProperty(column.Field).PropertyType.Name)
