--- a/Blazm.Components/SampleServerSide/Pages/GridDataColumn.razor
+++ b/Blazm.Components/SampleServerSide/Pages/GridDataColumn.razor
@@ -41,6 +41,7 @@ else
                 </FooterTemplate>
             </GridColumn>
             <GridColumn Field="@nameof(WeatherForecast.Summary)" Priority="0" />
+            <GridColumn Field="@nameof(WeatherForecast.NullValue)"/>
             <GridColumn Exportable="false">
                 <Template>
                     @{
